<resources>
    <string name="app_name">海兴电力</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="signup_title">注册Hexpay代理商帐号</string>
    <string name="signup_base">基本信息</string>
    <string name="signup_base_name">代理商名称:</string>
    <string name="signup_base_type">代理商类型:</string>
    <string name="signup_base_around">经营范围:</string>
    <string name="signup_base_last">开通余额提醒:</string>
    <string name="signup_base_lawman">法人代表:</string>
    <string name="signup_base_channel">购电渠道:</string>
    <string name="signup_base_channel1">互联网</string>
    <string name="signup_base_channel2">POS机</string>
    <string name="signup_base_channel3">终端</string>
    <string name="signup_base_channel4">短信</string>
    <string name="signup_base_idtype">证件类型:</string>
    <string name="signup_base_id">证件号码:</string>
    <string name="signup_base_time">证件有效期:</string>
    <string name="signup_base_idfront">证件正面:</string>
    <string name="signup_base_idback">证件反面:</string>
    <string name="signup_base_paytype">购电方式:</string>
    <string name="signup_base_nopass">无支付密码购电</string>
    <string name="signup_base_withpass">凭支付密码购电</string>
    <string name="signup_base_paypass">支付密码:</string>
    <string name="signup_base_confirmpaypass">确认密码:</string>
    <string name="signup_base_tax">税务证号:</string>
    <string name="signup_base_serve">服务电话:</string>
    <string name="signup_base_contact">代理商联系信息:</string>
    <string name="signup_base_address">办公地址:</string>
    <string name="signup_base_contactmen">联系人:</string>
    <string name="signup_base_tel">手机:</string>
    <string name="signup_base_mail">联系人邮箱:</string>
    <string name="signup_base_mailnum">邮政编码:</string>
    <string name="signup_base_login">登录信息:</string>
    <string name="signup_base_loginid">登录名:</string>
    <string name="signup_base_loginpass">密码:</string>
    <string name="signup_base_confirmpass">确认密码：</string>
    <string name="signup_base_save">提交</string>
    <string name="signup_base_close">返回</string>
    <string name="AGENT_TYPE_ITEM1">企业</string>
    <string name="AGENT_TYPE_ITEM2">个人</string>
    <string name="CRET_TYPE_ITEM1">居民身份证</string>
    <string name="CRET_TYPE_ITEM2">护照</string>
    <string name="CRET_TYPE_ITEM3">军官证</string>
    <string name="CRET_TYPE_ITEM4">港澳身份证</string>
    <string name="CRET_TYPE_ITEM5">台湾居民身份证</string>
    <string name="CRET_TYPE_ITEM6">临时身份证</string>
    <string name="CRET_TYPE_ITEM7">警察证</string>
    <string name="CRET_TYPE_ITEM8">其他</string>
    <string name="zn_error_msg">不可为空，且只能为中文或者数字和英文！</string>
    <string name="tax_error_msg">不可为空，且只能为数字、英文、下划线！</string>
    <string name="msg_error_userid">操作账户名只能6-16位的数字或字母!</string>
    <string name="msg_error_pass">密码需由6-16位英文字母，数字，或特殊字符中任意两种组合的密码！</string>
    <string name="msg_error_confirmpass">确认密码输入不正确!</string>
    <string name="msg_error_tel">请输入有效的手机号码</string>
    <string name="msg_error_mail">请输入有效的邮箱</string>
    <string name="msg_error_mailnum">邮编只能为数字</string>
    <string name="msg_error_timeblank">证件有效期不可为空</string>
    <string name="msg_error_timerror">有效期不能小于当前日期!</string>
    <string name="sign_loading">正在提交...</string>
    <string name="sign_failed">注册失败</string>
    <string name="sign_success">申请成功</string>
    <string name="sign_pic">添加图片</string>
    <string name="sign_pic_click">点击选择图片</string>
    <string name="sign_pic_photo">相机拍摄</string>
    <string name="sign_pic_picture">本地图片</string>
    <string name="sign_pic_wp">您选择的不是有效的图片</string>
    <string name="push_msg_title">通知</string>
    <string name="login_tv_button">登录</string>
    <string name="login_tv_signupnow">注册</string>
    <string name="login_tv_jizhuyonghuming">记住用户名</string>
    <string name="login_tv_duanxinmoshi">短信模式</string>
    <string name="login_username_not_null">用户名不能为空</string>
    <string name="login_password_not_null">密码不能为空</string>
    <string name="login_username_error">用户名输入错误</string>
    <string name="login_password_error">密码输入错误</string>
    <string name="login_progressdialog_title">请稍等</string>
    <string name="login_progressdialog_message">正在登录...</string>
    <string name="login_message_success">登录成功</string>
    <string name="login_message_supply_server_error">请求服务器出错</string>
    <string name="login_message_server_response_timeout">服务器响应超时</string>
    <string name="login_message_unknow_error">未知错误</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_fail_lock">该账户已被锁定，请15分钟后再尝试</string>
    <string name="login_fail_times">密码错误，剩余可登录次数:</string>
    <string name="login_fail_time_bad">校时失败，请重新登录</string>
    <string name="main_title_hexing">海兴电力支付代理商系统</string>
    <string name="main_title_xitongshezhi">系统设置</string>
    <string name="main_title_zhuxiao">注销</string>
    <string name="dlg_tuichudenglu_title">退出登录</string>
    <string name="dlg_tuichudenglu_btn_zjtc">直接退出</string>
    <string name="dlg_tuichudenglu_btn_scjl">生成记录</string>
    <string name="dlg_tuichudenglu_tv_tcts">退出前是否生成日结记录？</string>
    <string name="btn_keyback_title">是否确定退出？</string>
    <string name="btn_keyback_yes">确定</string>
    <string name="btn_keyback_no">取消</string>
    <string name="main_welcome_huangyingnin">欢迎您</string>
    <string name="main_welcome_jingrishoudian">今日售电：</string>
    <string name="main_welcome_baozhengjinyue">押金余额：</string>
    <string name="main_welcome_jingrishoudian_unit">笔</string>
    <string name="shoufeidetail_tv_yonghudizhi">用户地址：</string>
    <string name="shoufeidetail_tv_lianxidianhua">联系电话：</string>
    <string name="shoufeidetail_tv_dianligongsi">电力公司：</string>
    <string name="shoufeidetail_tv_dianfeiyuefen">电费月份：</string>
    <string name="shoufeidetail_tv_zhangdantiaoshu">账单条数：</string>
    <string name="shoufeidetail_tv_shoudianjine">售电金额：</string>
    <string name="shoufeidetail_tv_zhangdanjine">账单金额：</string>
    <string name="shoufeidetail_tv_dianbiaobianhao">电表编号：</string>
    <string name="shoufeidetail_tv_fuwufei">服务费：</string>
    <string name="shoufeidetail_tv_yingfujine">应付金额：</string>
    <string name="shoufeidetail_tv_qizhongdianfei">其中电费：</string>
    <string name="shoufeidetail_tv_qizhongweiyuejin">其中违约金：</string>
    <string name="shoufeidetail_tv_zhengzaijiazai">正在加载下一页...</string>
    <string name="shoufeidetail_phone_error">号码格式错误，请重新输入</string>
    <string name="main_edittext_input_hints">请输入户号或表号</string>
    <string name="main_button_shoufei_qingkong">清空</string>
    <string name="main_button_shoufei_huitui">回退</string>
    <string name="main_button_anyonghu">按用户查询</string>
    <string name="main_button_andianbiao">按表号查询</string>
    <string name="main_chongzheng_edittext_input_hints">请输入户号</string>
    <string name="main_chongzheng_button_chaxun">查询(回车)</string>
    <string name="main_edittext_input_hints1">请输入户号</string>
    <string name="main_button_readcard">读卡</string>
    <string name="note_pull_down">下拉可以刷新&#8230;</string>
    <string name="note_pull_refresh">松开即可刷新&#8230;</string>
    <string name="note_pull_loading">加载中&#8230;</string>
    <string name="note_update_at">更新于：%1$s</string>
    <string name="note_not_update">尚未更新</string>
    <string name="shoufeixiangqing_tv">收费详情</string>
    <string name="shoufeixiangqing_tv_gongjishoufei">共计收费：</string>
    <string name="shoufeixiangqing_btn_querenshoufei">确认收费</string>
    <string name="shoufeixiangqing_tv_querengoudian">确认购电</string>
    <string name="shoufeixiangqing_tv_zhifuzonge">支付总额：</string>
    <string name="shoufeixiangqing_tv_goudianliang">购电量：</string>
    <string name="shoufeixiangqing_tv_goudianjine">购电金额：</string>
    <string name="shoufeixiangqing_tv_shouxufei">手续费：</string>
    <string name="shoufeixiangqing_btn_querengoudian">确认购电</string>
    <string name="shoufeixiangqing_btn_zaicidayin">再次打印</string>
    <string name="shoufeixiangqing_btn_bangka">绑卡</string>
    <string name="dlg_goudianchenggong_token">Token</string>
    <string name="dlg_goudianchenggong_title">购电成功</string>
    <string name="dlg_goudianchenggong_zcdy">再次打印/写卡</string>
    <string name="dlg_goudianchenggong_bangka">绑定二维码</string>
    <string name="dlg_goudianchenggong_querenbangka">确认绑卡</string>
    <string name="shoudianxiangqing_tv_cysdje">常用售电金额</string>
    <string name="shoudianxiangqing_tv_srje">输入金额</string>
    <string name="shoudianxiangqing_btn_zdhbsf">账单合并收费</string>
    <string name="shoudianxiangqing_btn_huichequeren"></string>
    <string name="shoudianxiangqing_title">售电详情</string>
    <string name="shoudianxiangqing_kahao">卡号</string>
    <string name="shoudianxiangqing_btn_sf">收费</string>
    <string name="shoudianxiangqing_btn_sd">售电</string>
    <string name="shoudianxiangqing_tv_je">请输入金额</string>
    <string name="shoufeixiangqing_btn_querenbangka">确认绑卡</string>
    <string name="shoufeixiangqing_btn_citiaokabangka">磁条卡绑卡</string>
    <string name="shoufeixiangqing_btn_tiaomabangka">二维码/条码绑卡</string>
    <string name="shoudianxiangqing_error1">输入条件不能为空</string>
    <string name="shoufeixiangqing_shoufeishibai">收费失败！</string>
    <string name="shoufeixiangqing_fuwufeijisuanshibai">服务费计算失败！</string>
    <string name="shoufeixiangqing_goudianshibai">购电失败！</string>
    <string name="shoufeixiangqing_wangluoyichang">网络异常！</string>
    <string name="error">出错</string>
    <string name="error_open_magnetic_card">无法打开磁条卡设备</string>
    <string name="dialog_comfirm">确定</string>
    <string name="warm_password_lockWarm">支付密码连续输入错误次数达到系统限制，支付密码被锁定，系统将在两个小时后自动解锁</string>
    <string name="warm_password_lock">支付密码连续输入错误次数达到系统限制，支付密码已被锁定</string>
    <string name="warm_password_inputPer">密码错误，你还剩余</string>
    <string name="warm_password_inputLeft">次机会！</string>
    <string name="warm_cardType_wufashibie">卡类型无法识别！</string>
    <string name="shoudianxiangqing_bangkashibai">绑卡失败！</string>
    <string name="shoudianxiangqing_bangkachenggong">绑卡成功！</string>
    <string name="shoudianxiangqing_xiekachenggong">写卡成功！</string>
    <string name="shoudianxiangqing_xiekashibai">写卡失败！</string>
    <string name="card_type_select">请选择IC卡类型</string>
    <string name="card_type_4428">4428</string>
    <string name="card_type_4442">4442</string>
    <string name="auto_readCard_success">自动读卡成功！</string>
    <string name="auto_readCard_fail">自动读卡失败！</string>
    <string name="warm_swipcard">请刷卡...</string>
    <string name="warm_bandcard">请绑卡...</string>
    <string name="shoudianxiangqing_dukachenggong">读卡成功！</string>
    <string name="shoudianxiangqing_dukashibai">读卡失败！</string>
    <string name="shoudianxiangqing_sendsms_title">发送短信</string>
    <string name="shoudianxiangqing_sendsms_num">请输入手机号码</string>
    <string name="shoudianxiangqing_sure">确定</string>
    <string name="shoudianxiangqing_titletip">提示</string>
    <string name="str_pingzhengbuda">凭证查询</string>
    <string name="pinzhengbuda_btn_bd">补打</string>
    <string name="pinzhengbuda_btn_xk">写卡</string>
    <string name="str_jiaoyidanhao">交易单号: </string>
    <string name="str_jiaofeijine">缴费金额: </string>
    <string name="str_jiaoyishijian">交易时间: </string>
    <string name="str_yewuleixing">业务类型: </string>
    <string name="str_dianligongsi">电力公司: </string>
    <string name="str_biaohao">表号: </string>
    <string name="str_huhao">户号: </string>
    <string name="str_token">Token: </string>
    <string name="detail_chongzhengshenqing_hints">请输入户号</string>
    <string name="detail_chongzhengshenqing_listtv_jiaoyidanhao">交易单号</string>
    <string name="detail_chongzhengshenqing_listtv_yewuleixing">业务类型</string>
    <string name="detail_chongzhengshenqing_listtv_jiaofeijine">缴费金额</string>
    <string name="detail_chongzhengshenqing_listtv_jiaoyishijian">交易时间</string>
    <string name="detail_yajinchongzhi_title">选择支付方式</string>
    <string name="detail_yajinchongzhi_alipay">支付宝支付</string>
    <string name="detail_yajinchongzhi_wechat">微信支付</string>
    <string name="detail_yajinchongzhi_bank">银行卡支付</string>
</resources>