<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
    
         <LinearLayout
            android:id="@+id/titleLay"
	        android:layout_width="fill_parent"
	        android:layout_height="50dp"
	        android:background="@color/gainsboro"
	        android:orientation="horizontal">
	        <TextView
		        android:id="@+id/textView1"
		        android:layout_width="fill_parent"
		        android:layout_height="50dp"
		        android:gravity="center_vertical"
		        android:background="@color/gainsboro"
		        android:textSize="18dp"
		        android:text="@string/detail_yajinchongzhi_title" />
	     </LinearLayout>
        
        
		        <LinearLayout
		            android:id="@+id/alipayLay"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:padding="8dp"
			        android:orientation="horizontal" >
		
		            <ImageView
		                android:id="@+id/alipayradioImage"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginLeft="10dp"
		                android:src="@drawable/alipaylogo" />
		            
		            <TextView
				        android:layout_width="fill_parent"
				        android:layout_height="fill_parent"
				        android:layout_marginLeft="5dp"
				        android:gravity="center_vertical"
				        android:textSize="18dp"
				        android:text="@string/detail_yajinchongzhi_alipay" />
		            
			   </LinearLayout>
			   
		        <View 
		                android:layout_height="1px"
		                android:layout_width="fill_parent"
		                android:background="@color/black"/>
		        
		        <LinearLayout
		            android:id="@+id/weChatLay"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:padding="8dp"
			        android:orientation="horizontal" >
		
		            <ImageView
		                android:id="@+id/WeChatImage"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginLeft="10dp"
		                android:src="@drawable/wechatlogo" />
		            
		            <TextView
				        android:layout_width="fill_parent"
				        android:layout_height="fill_parent"
				        android:layout_marginLeft="5dp"
				        android:gravity="center_vertical"
				        android:textSize="18dp"
				        android:text="@string/detail_yajinchongzhi_wechat" />
			   </LinearLayout>
		        
		        <View 
		                android:layout_height="1px"
		                android:layout_width="fill_parent"
		                android:background="@color/black"/>
		        
		       <LinearLayout
		            android:id="@+id/bankLay"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:padding="8dp"
			        android:orientation="horizontal" >
		
		            <ImageView
		                android:id="@+id/bankImage"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginLeft="10dp"
		                android:src="@drawable/banklogo" />
		            
		            <TextView
				        android:layout_width="fill_parent"
				        android:layout_height="fill_parent"
				        android:layout_marginLeft="5dp"
				        android:gravity="center_vertical"
				        android:textSize="18dp"
				        android:text="@string/detail_yajinchongzhi_bank" />
			   </LinearLayout>
			   
		        <View 
		                android:layout_height="1px"
		                android:layout_width="fill_parent"
		                android:background="@color/black"/>
        
    </LinearLayout>


</RelativeLayout>
