<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/main_frame_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:orientation="horizontal"
            android:weightSum="6"
        android:layout_weight="0">

        <AutoCompleteTextView
            android:id="@+id/inputCond"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@drawable/border_shape_thin"
            android:ems="10"
            android:hint="@string/main_edittext_input_hints"
            android:inputType="number"
            android:maxLength="19"
            android:singleLine="true"
            android:textSize="24sp"
            android:textStyle="bold"
                android:layout_weight="4">

            <requestFocus />
        </AutoCompleteTextView>
        <ImageButton
                android:id="@+id/btn_read"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:src="@drawable/scancard"
                android:layout_weight="1"/>
        <ImageButton
                android:id="@+id/btn_scan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:src="@drawable/scanbtn"
                android:layout_weight="1"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:layout_marginRight="10px"
        android:layout_marginTop="10dp" 
        android:layout_weight="4.5"
        android:weightSum="3">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button1"
                style="@style/buttonNumberStylePort"
                android:background="?attr/button_number_background_port"
                android:text="1" />

            <Button
                android:id="@+id/button2"
                style="@style/buttonNumberStylePort"
                android:layout_marginLeft="5dp"
                android:background="?attr/button_number_background_port"
                android:text="2" />

            <Button
                android:id="@+id/button3"
                style="@style/buttonNumberStylePort"
                android:layout_marginLeft="5dp"
                android:background="?attr/button_number_background_port"
                android:text="3" />

            <Button
                android:id="@+id/button4"
                style="@style/buttonNumberStylePort"
                android:layout_marginLeft="5dp"
                android:background="?attr/button_number_background_port"
                android:text="4" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button5"
                style="@style/buttonNumberStylePort"
                android:background="?attr/button_number_background_port"
                android:text="5" />

            <Button
                android:id="@+id/button6"
                style="@style/buttonNumberStylePort"
                android:layout_marginLeft="5dp"
                android:background="?attr/button_number_background_port"
                android:text="6" />

            <Button
                android:id="@+id/button7"
                style="@style/buttonNumberStylePort"
                android:layout_marginLeft="5dp"
                android:background="?attr/button_number_background_port"
                android:text="7" />

            <Button
                android:id="@+id/button8"
                style="@style/buttonNumberStylePort"
                android:layout_marginLeft="5dp"
                android:background="?attr/button_number_background_port"
                android:text="8" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/buttonClear"
                style="@style/buttonClearBackStyle"
                android:background="?attr/button_clear_back_background"
                android:text="@string/main_button_shoufei_qingkong" 
                android:padding="0dp"/>

            <Button
                android:id="@+id/button9"
                style="@style/buttonNumberStylePort"
                android:layout_marginLeft="5dp"
                android:background="?attr/button_number_background_port"
                android:text="9" />

            <Button
                android:id="@+id/button0"
                style="@style/buttonNumberStylePort"
                android:layout_marginLeft="5dp"
                android:background="?attr/button_number_background_port"
                android:text="0" />

            <Button
                android:id="@+id/buttonBack"
                style="@style/buttonClearBackStyle"
                android:layout_marginLeft="5dp"
                android:background="?attr/button_clear_back_background"
                android:text="@string/main_button_shoufei_huitui"
                android:padding="0dp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:layout_marginRight="10px"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" 
        android:layout_weight="1.5">

        <Button
            android:id="@+id/buttonByUser"
            style="@style/buttonFunctionStylePortBig"
            android:layout_marginRight="3dp"
            android:padding="0dp"
            android:background="?attr/button_function_background_port"
            android:text="@string/main_button_anyonghu" />

        <Button
            android:id="@+id/buttonByElecWatch"
            style="@style/buttonFunctionStylePortBig"
            android:layout_marginLeft="5dp"
            android:padding="0dp"
            android:background="?attr/button_function_background_port"
            android:text="@string/main_button_andianbiao" />
    </LinearLayout>

</LinearLayout>